FIX: Made FindMe button bigger on mobile

--- a/css/components/map.css
+++ b/css/components/map.css
@@ -46,7 +46,7 @@
   }
 
   .find-me {
-    height: auto;
+    height: 24%;
     width: 100%;
   }
   .find-me br{
